[package]
name = "console-web"
description = "A create for writing to the console in wasm (using wasm-bindgen)"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"
keywords = ["wasm", "console", "debugging", "wasm-bindgen", "web-sys"]
license = "Apache-2.0/MIT"
repository = "https://github.com/derekdreery/console.web"

[dependencies]
js-sys = "*"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
